tests/e2e/try_throw_error.error
Error: syntax error in story at line 3, column 1

3|    catch as error
      ^^^^^^^^^^^^^^

E0136: Access to the exception object is currently disallowed.
