tests/e2e/try_throw_error.story
try
	x=0
catch as error
	throw error
